--- a/angular/angular-tour-of-heros/src/app/heroes/heroes.component.html
+++ b/angular/angular-tour-of-heros/src/app/heroes/heroes.component.html
@@ -1,15 +1,7 @@
-<h2>{{ selectedHero.name }} Details</h2>
-<div>
-  <span>id: </span>{{selectedHero.id}}</div>
-<div>
-  <span>name: </span>{{selectedHero.name | uppercase}}
-</div>
-<div *ngIf="selectedHero">
-  <input [(ngModel)] = "selectedHero.name" placeholder="name"/>
-</div>
 <h2>My Heros</h2>
-<ul>
-  <li *ngFor="let hero of heros" (click)="onSelect(hero)">
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
